# community-insights

./: .gitignore  COMMANDS.md  DEVELOPER_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  README.md  example.env  requirements.txt  start_oracle_eye.bat  test_taraxa.bat
docs/: cost_management.md  getting_started.md  how_it_works.md  intro.md  project_analysis.md  roadmap.md  twitter_threads.md  weekly_digest.md
neural-core/: README.md  env.example  pyproject.toml  requirements.txt
neural-core/src/: __init__.py  main.py
neural-core/src/cli/: commands.py  main.py
neural-core/src/models/: project.py
neural-core/src/services/: __init__.py  ai_processor.py  database.py  relevance_analyzer.py
neural-core/src/utils/: config.py
oracle-eye/: README.md  env.example  requirements.txt
oracle-eye/src/: __init__.py  main.py
oracle-eye/src/models/: __init__.py  message.py  project.py  summary.py
oracle-eye/src/services/: __init__.py  command_monitor.py  database.py  telegram_collector.py
oracle-eye/src/utils/: config.py
