[tool.poetry]
name = "neural-core"
version = "0.1.0"
description = "AI-powered insights agent for Telegram community analysis"
authors = ["Community Insights Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.28.8"
typer = "^0.9.0"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
rich = "^13.7.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
neural-core = "src.main:main"
